adding remote user to php_app_config.yml

--- a/php_app_config.yml
+++ b/php_app_config.yml
@@ -1,6 +1,7 @@
 ---
 - name: Playbook to configure a PHP app on a LEMP stack 
   hosts: all
+  remote_user: emmanuel.apreko
   vars_files:
     - vars/main.yml
   
