--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,7 +8,7 @@ vault_password_file = /home/$USER/.ansible/vault_pass.txt
 inventory = ./inventory/hosts.yml
 
 hosts = noDefaultForSafety
-ssh_args = -o ServerAliveInterval=30 -C -o ControlMaster=auto -o ControlPersist=60s -i /home/$USER/.ssh/stickee-ansible
+ssh_args = -o ServerAliveInterval=30 -C -o ControlMaster=auto -o ControlPersist=60s -i /home/$USER/.ssh/eapreko
 host_key_checking = False
 
 [connection]
