--- a/php_app_config.yml
+++ b/php_app_config.yml
@@ -13,12 +13,13 @@
         owner: root
         mode: '0755'
         state: directory
+      loop: "{{ user_list }}"
 
     - name: Create app user 
       ansible.builtin.user:
         name: "{{ item }}"
         create_home: true
-        home: /srv/users/"{{ user_list }}"
+#        home: /srv/users/"{{ user_list }}"
       loop: "{{ user_list }}"
 
     - name: Add user www-data to app users' group
