--- a/dir_creation.yml
+++ b/dir_creation.yml
@@ -9,11 +9,12 @@
   tasks:
     - name: Create app directories
       ansible.builtin.file:
-        path: "{{ item.dir_name }}"
-        owner: "{{ item.owner }}"
+        path: "/var/log/php-fpm/{{ item[0] }}"
+        owner: "{{ item[0] }}"
         mode: "{{ item.mode }}"
         state: directory
       with_items:
-        - { dir_name: /var/log/php-fpm/{{ user_list }}, mode: '0700', owner: "{{ user_list }}" }
+        - "{{ user_list }}"
+        - { mode: '0700' }
           
         
