--- a/dir_creation.yml
+++ b/dir_creation.yml
@@ -13,7 +13,7 @@
         owner: "{{ item[0] }}"
         mode: "{{ item.mode }}"
         state: directory
-      with_items:
+      with_nested:
         - "{{ user_list }}"
         - { mode: '0700' }
           
