--- a/dir_creation.yml
+++ b/dir_creation.yml
@@ -11,10 +11,10 @@
       ansible.builtin.file:
         path: "/var/log/php-fpm/{{ item[0] }}"
         owner: "{{ item[0] }}"
-        mode: "{{ item.mode }}"
+        mode: "{{ item[1] }}"
         state: directory
       with_nested:
         - "{{ user_list }}"
-        - { mode: '0700' }
+        - [ '0700' ]
           
         
