--- a/dir_creation.yml
+++ b/dir_creation.yml
@@ -9,12 +9,14 @@
   tasks:
     - name: Create app directories
       ansible.builtin.file:
-        path: "/var/log/php-fpm/{{ item[0] }}"
+        path: "{{ item[2] }}/{{ item[0] }}"
         owner: "{{ item[0] }}"
+        group: "{{ item[0] }}"
         mode: "{{ item[1] }}"
         state: directory
       with_nested:
         - "{{ user_list }}"
         - [ '0700' ]
+        - [ '/var/log/php-fpm/','/var/lib/php/sessions/','/var/www/' ]
           
         
