trying nested loop with conf files copy

--- a/conf_copy.yml
+++ b/conf_copy.yml
@@ -7,14 +7,26 @@
     - vars/main.yml
   
   tasks:
+    # - name: Copy configuration files to server using templates.
+    #   ansible.builtin.template:
+    #     src: "{{ item.src }}"
+    #     dest: "{{ item.dest }}"
+    #     owner: "{{ item.owner }}"
+    #     mode: 0644
+    #   with_items:
+    #     - { src: "files/info.php", dest: "/var/www/{{ user_list }}/", owner: "{{ user_list }}" }
+    #     - { src: "files/fpm.conf.j2", dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ user_list }}.conf", owner: "root" }
+    #     - { src: "files/http.conf.j2", dest: "/etc/nginx/sites-available/{{ user_list }}-http.conf", owner: "root" }
+          
     - name: Copy configuration files to server using templates.
       ansible.builtin.template:
-        src: "{{ item.src }}"
+        src: "{{ item[1] }}"
         dest: "{{ item.dest }}"
         owner: "{{ item.owner }}"
-        mode: 0644
-      with_items:
-        - { src: "files/info.php", dest: "/var/www/{{ user_list }}/", owner: "{{ user_list }}" }
-        - { src: "files/fpm.conf.j2", dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ user_list }}.conf", owner: "root" }
-        - { src: "files/http.conf.j2", dest: "/etc/nginx/sites-available/{{ user_list }}-http.conf", owner: "root" }
-        
+        mode: '0644'
+      with_nested:
+        - "{{ user_list }}"
+        - [ 'files/info.php','files/fpm.conf.j2','files/http.conf.j2' ]
+        - [ '/var/www/{{ user_list }}/','/etc/php/{{ php_version }}/fpm/pool.d/{{ user_list }}.conf','/etc/nginx/sites-available/{{ user_list }}-http.conf' ]
+        - [ '{{ item.item[0] }}','root','root' ]
+        # - { src: "", dest: "", owner: "{{ user_list }}" }     
