--- a/conf_copy.yml
+++ b/conf_copy.yml
@@ -27,6 +27,6 @@
       with_nested:
         - "{{ user_list }}"
         - [ 'files/info.php','files/fpm.conf.j2','files/http.conf.j2' ]
-        - [ '/var/www/{{ item.item[0] }}/','/etc/php/{{ php_version }}/fpm/pool.d/{{ item.item[0] }}.conf','/etc/nginx/sites-available/{{ item.item[0] }}-http.conf' ]
-        - [ '{{ item.item[0] }}','root','root' ]
+        - [ '/var/www/{{ item[0] }}/','/etc/php/{{ php_version }}/fpm/pool.d/{{ item[0] }}.conf','/etc/nginx/sites-available/{{ item[0] }}-http.conf' ]
+        - [ '{{ item[0] }}','root','root' ]
         # - { src: "", dest: "", owner: "{{ user_list }}" }     
