--- a/conf_copy.yml
+++ b/conf_copy.yml
@@ -9,11 +9,11 @@
   tasks:
     # - name: Copy configuration files to server using templates.
     #   ansible.builtin.template:
-    #     src: "{{ item[0].src }}"
-    #     dest: "{{ item[0].dest }}"
-    #     owner: "{{ item[0].owner }}"
+    #     src: "{{ item.src }}"
+    #     dest: "{{ item.dest }}"
+    #     owner: "{{ item.owner }}"
     #     mode: 0644
-    #   with_item[0]s:
+    #   with_items:
     #     - { src: "files/info.php", dest: "/var/www/{{ user_list }}/", owner: "{{ user_list }}" }
     #     - { src: "files/fpm.conf.j2", dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ user_list }}.conf", owner: "root" }
     #     - { src: "files/http.conf.j2", dest: "/etc/nginx/sites-available/{{ user_list }}-http.conf", owner: "root" }
@@ -40,32 +40,29 @@
     - name: Copy test php page to app directory
       ansible.builtin.template:
         src: "files/info.php"
-        dest: "/var/www/{{ item[0] }}/"
+        dest: "/var/www/{{ item }}/"
         owner: "{{ item[0] }}"
         group: "{{ item[0] }}"
         mode: '0644'
-      with_nested:
-        - "{{ user_list }}"
+      loop: "{{ user_list }}"
     
     - name: Copy fpm.conf to app's fpm pool directory
       ansible.builtin.template:
         src: "files/fpm.conf.j2"
-        dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ item[0] }}.conf"
+        dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ item }}.conf"
         owner: "{{ item[0] }}"
         group: "{{ item[0] }}"
         mode: '0644'
-      with_nested:
-        - "{{ user_list }}"
+      loop: "{{ user_list }}"
 
     - name: Copy http.conf to app's nginx sites-available directory
       ansible.builtin.template:
         src: "files/http.conf.j2"
-        dest: "/etc/nginx/sites-available/{{ item[0] }}-http.conf"
+        dest: "/etc/nginx/sites-available/{{ item }}-http.conf"
         owner: "{{ item[0] }}"
         group: "{{ item[0] }}"
         mode: '0644'
-      with_nested:
-        - "{{ user_list }}"
+      loop: "{{ user_list }}"
     
       
         
