--- a/conf_copy.yml
+++ b/conf_copy.yml
@@ -40,7 +40,7 @@
     - name: Copy test php page to app directory
       ansible.builtin.template:
         src: "files/info.php"
-        dest: "/var/www/{{ item }}/"
+        dest: "/var/www/{{ item[0] }}/"
         owner: "{{ item[0] }}"
         group: "{{ item[0] }}"
         mode: '0644'
@@ -49,7 +49,7 @@
     - name: Copy fpm.conf to app's fpm pool directory
       ansible.builtin.template:
         src: "files/fpm.conf.j2"
-        dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ item }}.conf"
+        dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ item[0] }}.conf"
         owner: "{{ item[0] }}"
         group: "{{ item[0] }}"
         mode: '0644'
@@ -58,7 +58,7 @@
     - name: Copy http.conf to app's nginx sites-available directory
       ansible.builtin.template:
         src: "files/http.conf.j2"
-        dest: "/etc/nginx/sites-available/{{ item }}-http.conf"
+        dest: "/etc/nginx/sites-available/{{ item[0] }}-http.conf"
         owner: "{{ item[0] }}"
         group: "{{ item[0] }}"
         mode: '0644'
