--- a/conf_copy.yml
+++ b/conf_copy.yml
@@ -46,23 +46,23 @@
         mode: '0644'
       with_nested: "{{ user_list }}"
     
-    - name: Copy fpm.conf to app's fpm pool directory
-      ansible.builtin.template:
-        src: "files/fpm.conf.j2"
-        dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ item[0] }}.conf"
-        owner: "{{ item[0] }}"
-        group: "{{ item[0] }}"
-        mode: '0644'
-      with_nested: "{{ user_list }}"
+    # - name: Copy fpm.conf to app's fpm pool directory
+    #   ansible.builtin.template:
+    #     src: "files/fpm.conf.j2"
+    #     dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ item[0] }}.conf"
+    #     owner: "{{ item[0] }}"
+    #     group: "{{ item[0] }}"
+    #     mode: '0644'
+    #   with_nested: "{{ user_list }}"
 
-    - name: Copy http.conf to app's nginx sites-available directory
-      ansible.builtin.template:
-        src: "files/http.conf.j2"
-        dest: "/etc/nginx/sites-available/{{ item[0] }}-http.conf"
-        owner: "{{ item[0] }}"
-        group: "{{ item[0] }}"
-        mode: '0644'
-      with_nested: "{{ user_list }}"
+    # - name: Copy http.conf to app's nginx sites-available directory
+    #   ansible.builtin.template:
+    #     src: "files/http.conf.j2"
+    #     dest: "/etc/nginx/sites-available/{{ item[0] }}-http.conf"
+    #     owner: "{{ item[0] }}"
+    #     group: "{{ item[0] }}"
+    #     mode: '0644'
+    #   with_nested: "{{ user_list }}"
     
       
         
