--- a/conf_copy.yml
+++ b/conf_copy.yml
@@ -44,7 +44,8 @@
         owner: "{{ item[0] }}"
         group: "{{ item[0] }}"
         mode: '0644'
-      with_nested: "{{ user_list }}"
+      with_nested: 
+        - "{{ user_list }}"
     
     # - name: Copy fpm.conf to app's fpm pool directory
     #   ansible.builtin.template:
