--- a/conf_copy.yml
+++ b/conf_copy.yml
@@ -40,12 +40,11 @@
     - name: Copy test php page to app directory
       ansible.builtin.template:
         src: "files/info.php"
-        dest: "/var/www/{{ item[0] }}/"
-        owner: "{{ item[0] }}"
-        group: "{{ item[0] }}"
+        dest: "/var/www/{{ item }}/"
+        owner: "{{ item }}"
+        group: "{{ item }}"
         mode: '0644'
-      with_nested: 
-        - "{{ user_list }}"
+      loop: "{{ user_list }}"
     
     # - name: Copy fpm.conf to app's fpm pool directory
     #   ansible.builtin.template:
