--- a/conf_copy.yml
+++ b/conf_copy.yml
@@ -18,7 +18,7 @@
     #     - { src: "files/fpm.conf.j2", dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ user_list }}.conf", owner: "root" }
     #     - { src: "files/http.conf.j2", dest: "/etc/nginx/sites-available/{{ user_list }}-http.conf", owner: "root" }
     #       copy all config files to /tmp/conf_files/
-    #       output user_list to file and copy to /tmp/conf_files/ with_nested:
+    #       output user_list to file and copy to /tmp/conf_files/ loop:
     # - name: Copy configuration files to server using templates.
     #   ansible.builtin.shell: |
     #     php_version=`php -v|head -1|awk '{print $2}'|head -c -3`
@@ -46,23 +46,23 @@
         mode: '0644'
       loop: "{{ user_list }}"
     
-    # - name: Copy fpm.conf to app's fpm pool directory
-    #   ansible.builtin.template:
-    #     src: "files/fpm.conf.j2"
-    #     dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ item[0] }}.conf"
-    #     owner: "{{ item[0] }}"
-    #     group: "{{ item[0] }}"
-    #     mode: '0644'
-    #   with_nested: "{{ user_list }}"
+    - name: Copy fpm.conf to app's fpm pool directory
+      ansible.builtin.template:
+        src: "files/fpm.conf.j2"
+        dest: "/etc/php/{{ php_version }}/fpm/pool.d/{{ item }}.conf"
+        owner: "{{ item }}"
+        group: "{{ item }}"
+        mode: '0644'
+      loop: "{{ user_list }}"
 
-    # - name: Copy http.conf to app's nginx sites-available directory
-    #   ansible.builtin.template:
-    #     src: "files/http.conf.j2"
-    #     dest: "/etc/nginx/sites-available/{{ item[0] }}-http.conf"
-    #     owner: "{{ item[0] }}"
-    #     group: "{{ item[0] }}"
-    #     mode: '0644'
-    #   with_nested: "{{ user_list }}"
+    - name: Copy http.conf to app's nginx sites-available directory
+      ansible.builtin.template:
+        src: "files/http.conf.j2"
+        dest: "/etc/nginx/sites-available/{{ item }}-http.conf"
+        owner: "{{ item }}"
+        group: "{{ item }}"
+        mode: '0644'
+      loop: "{{ user_list }}"
     
       
         
