--- a/conf_copy.yml
+++ b/conf_copy.yml
@@ -5,6 +5,12 @@
   become: true
   vars_files:
     - vars/main.yml
+  vars: 
+    syncjobs:
+      - filename: output1.bash
+        content: data1
+      - filename: output2.bash
+        content: data2
   
   tasks:
     # - name: Copy configuration files to server using templates.
@@ -37,14 +43,14 @@
     #   args:
     #     executable: /bin/bash
 
-    - name: Copy test php page to app directory
-      ansible.builtin.template:
-        src: "files/info.php"
-        dest: "/var/www/{{ item.app_username }}/"
-        owner: "{{ item }}"
-        group: "{{ item }}"
-        mode: '0644'
-      with_items: "{{ app_username }}"
+    # - name: Copy test php page to app directory
+    #   ansible.builtin.template:
+    #     src: "files/info.php"
+    #     dest: "/var/www/{{ item.app_username }}/"
+    #     owner: "{{ item }}"
+    #     group: "{{ item }}"
+    #     mode: '0644'
+    #   with_items: "{{ app_username }}"
     
     # - name: Copy fpm.conf to app's fpm pool directory
     #   ansible.builtin.template:
@@ -65,4 +71,10 @@
     #   loop: "{{ user_list }}"
     
       
-        
+    - name: Create scripts
+      ansible.builtin.template:
+        src: "files/fpm.conf.j2"
+        dest: /var/www/{{ item.filename }}
+        owner: root
+        mode: "u+x,o-r"
+      with_items: "{{ syncjobs }}"
