--- a/task_tester.yml
+++ b/task_tester.yml
@@ -7,15 +7,12 @@
     - vars/main.yml
 
   tasks:
-    - name: Create app user ## issue diff dir perms for each user [0755/0750]
-      ansible.builtin.user:
-        name: "{{ item.user }}"
-        create_home: true
-        home: "/srv/users/{{ item.user }}"
-      with_items: "{{ app_username }}"
-      
-    - name: Add user www-data to app users' group
-      ansible.builtin.user:
-        name: www-data
-        groups: "{{ item.user }}"
-      with_items: "{{ app_username }}" 
+    - name: Create app directories
+      ansible.builtin.file:
+        path: "{{ item[0] }}/{{ item.user }}"
+        owner: "{{ item.user }}"
+        group: "{{ item.user }}"
+        mode: '0700'
+        state: directory
+      with_nested:
+        - [ '/var/log/php-fpm/','/var/lib/php/sessions/','/var/www/' ]
