--- a/task_tester.yml
+++ b/task_tester.yml
@@ -9,9 +9,9 @@
   tasks:
     - name: Create app directories
       ansible.builtin.file:
-        path: "{{ item[1] }}/{{ item[0] }}"
-        owner: "{{ item[0] }}"
-        group: "{{ item[0] }}"
+        path: "{{ item[1] }}/{{ item.user }}"
+        owner: "{{ item.user }}"
+        group: "{{ item.user }}"
         mode: '0700'
         state: directory
       with_nested:
