--- a/task_tester.yml
+++ b/task_tester.yml
@@ -9,9 +9,9 @@
   tasks:
     - name: Create app directories
       ansible.builtin.file:
-        path: "{{ item[1] }}/{{ lookup('user', item[0]) }}"
-        owner: "{{ lookup('user', item[0]) }}"
-        group: "{{ lookup('user', item[0]) }}"
+        path: "{{ item[1] }}/{{ app_username[item[user]] }}"
+        owner: "{{ app_username[item[user]] }}"
+        group: "{{ app_username[item[user]] }}"
         mode: '0700'
         state: directory
       with_nested:
