--- a/task_tester.yml
+++ b/task_tester.yml
@@ -9,11 +9,12 @@
   tasks:
     - name: Create app directories
       ansible.builtin.file:
-        path: "{{ item[1] }}/{{ app_username[item[user]] }}"
-        owner: "{{ app_username[item[user]] }}"
-        group: "{{ app_username[item[user]] }}"
+        path: "{{ item[1] }}/{{ item[0] }}"
+        owner: "{{ item[0] }}"
+        group: "{{ item[0] }}"
         mode: '0700'
         state: directory
       with_nested:
-        - "{{ app_username }}"
+        - "{{ user_list }}"
+        - [ '0700', '0700', '0755' ]
         - [ '/var/log/php-fpm/','/var/lib/php/sessions/','/var/www/' ]
