--- a/task_tester.yml
+++ b/task_tester.yml
@@ -9,10 +9,10 @@
   tasks:
     - name: Create app directories
       ansible.builtin.file:
-        path: "{{ item[1] }}/{{ item[0] }}"
+        path: "{{ item[2] }}/{{ item[0] }}"
         owner: "{{ item[0] }}"
         group: "{{ item[0] }}"
-        mode: '0700'
+        mode: "{{ item[1] }}"
         state: directory
       with_nested:
         - "{{ user_list }}"
