--- a/task_tester.yml
+++ b/task_tester.yml
@@ -7,14 +7,14 @@
     - vars/main.yml
 
   tasks:
-    - name: Create app directories
-      ansible.builtin.file:
-        path: "{{ item[2] }}/{{ item[0] }}"
-        owner: "{{ item[0] }}"
-        group: "{{ item[0] }}"
-        mode: "{{ item[1] }}"
-        state: directory
-      with_nested:
-        - "{{ user_list }}"
-        - [ '0700', '0700', '0755' ]
-        - [ '/var/log/php-fpm/','/var/lib/php/sessions/','/var/www/' ]
+    - name: Copy test php page to app directory
+      ansible.builtin.template:
+        src: "{{ item.src }}"
+        dest: "{{ item.dest }}"
+        owner: "{{ item.user }}"
+        group: "{{ item.user }}"
+        mode: '0644'
+      with_items: 
+        - "{{ app_username }}"
+        - { src: "files/info.php", "files/fpm.conf.j2", "files/http.conf.j2" }
+        - { dest: "/var/www/{{ item.user }}/", "/etc/php/{{ php_version }}/fpm/pool.d/{{ item.user }}.conf", "/etc/nginx/sites-available/{{ item.user }}-http.conf" }
