testing with_items with 1 config file copy

--- a/task_tester.yml
+++ b/task_tester.yml
@@ -13,6 +13,6 @@
         dest: "{{ item.dest }}"
         mode: '0644'
       with_items: 
-        - { src: files/info.php, dest: "/var/www/{{ item.user }}/", user: "{{ app_username }}" }
+        - { src: files/info.php, dest: "/var/www/" }
 
 
